# trieste-stuff

./: .gitignore  lang.hh
cmm/: CMakeLists.txt  grammar-cmm.txt  lang.cc  lang.hh  main.cc  parse.cc  wf.hh
cmm/programs/: bad_else.cmm  good_if.cmm  good_while.cmm  test1.cmm
list/: CMakeLists.txt  Makefile  README.md  lang.cc  lang.hh  main.cc  notes.md  parse.cc  wf.hh
list/programs/: test.list
semantics/: semantics.tex
semantics/coq/: Trieste.v  _CoqProject
shrubbery/: .gitignore  CMakeLists.txt  Makefile  README.md
shrubbery/examples/: block.shrub
shrubbery/examples/failing/: doubleSemicolon.shrub
shrubbery/src/: lang.cc  lang.h  main.cc  parse.cc  wf.h
